k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: ecommerce-microservices-order-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: ecommerce

spec:
  selector:
    app: order-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
