k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service
          image: ecommerce-microservices-product-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service

metadata:
  name: product-service
  namespace: ecommerce

spec:
  selector:
    app: product-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
