k8s/statefulset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ecommerce
spec:
  clusterIP: None
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
