k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: ecommerce-microservices-user-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service

metadata:
  name: user-service
  namespace: ecommerce

spec:
  selector:
    app: user-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
